# flask-redis-k8s

./: README.md  manifest.yaml
flask-app/: Dockerfile  README.md  pyproject.toml
